# snapfind

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
src/: alloc.rs  allocator.rs  crawler.rs  error.rs  lib.rs  main.rs  search.rs  text.rs  types.rs
src/snap_find/: crawler.rs  error.rs  mod.rs  search.rs  text.rs
src/snapfind/: crawler.rs  error.rs  search.rs
