[package]
name = "snapfind"
version = "1.0.0"
description = "Fast, memory-efficient file search utility with predictable resource usage"
edition = "2024"
authors = ["Success Kingsley <hello@xosnrdev.tech>"]
license = "MIT"
repository = "https://github.com/xosnrdev/snapfind"
homepage = "https://github.com/xosnrdev/snapfind#readme"
readme = "README.md"
keywords = ["search", "files", "semantic", "finder"]
categories = ["command-line-utilities", "filesystem"]

[[bin]]
name = "snap"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.97"
arrayvec = { version = "0.7.6", default-features = false }
clap = { version = "4.5.35", features = ["derive"] }
clap-cargo = { version = "0.15.2", features = [
    "clap",
], default-features = false }
globset = { version = "0.4.16", default-features = false }

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3
debug = false
incremental = false
overflow-checks = false
rpath = false
debug-assertions = false

[profile.dev]
debug-assertions = true
overflow-checks = true

[dev-dependencies]
tempfile = "3.19.1"

[package.metadata]
codegen-units-std = 1
