[package]
name = "snapfind"
version = "1.0.0"
description = "Fast, memory-efficient file search utility with predictable resource usage"
edition = "2024"
authors = ["Success Kingsley <hello@xosnrdev.tech>"]
license = "MIT"
repository = "https://github.com/xosnrdev/snapfind"
homepage = "https://github.com/xosnrdev/snapfind#readme"
readme = "README.md"
keywords = ["search", "files", "semantic", "finder"]
categories = ["command-line-utilities", "filesystem"]

[[bin]]
name = "snap"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
arrayvec = "0.7.6"
clap = { version = "4.5.39", features = ["derive"] }
clap-cargo = "0.15.2"
globset = "0.4.16"

[dev-dependencies]
tempfile = "3.20.0"
